k8s/app.yaml
# app.yaml
apiVersion: apps/v1
kind: Deployment
# A Deployment manages a set of Pods to run an application workload
metadata:
  name: team18-app
  labels:
    app: team18-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team18-app
  template: # all pods will be created from this template
    metadata:
      labels:
        app: team18-app
    spec:
      containers:
        - name: team18-app
          image: ghcr.io/remla25-team18/app:0.0.7
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: team18-app
spec:
  type: NodePort
  ports:
    - port: 4200
      targetPort: 4200
      nodePort: 30001
  selector:
    app: team18-app
